remove useless null checks; naming improved
Signed-off-by: Christian Kittel <ckittel@gmx.de>